--- a/public/blog.html
+++ b/public/blog.html
@@ -13,14 +13,14 @@
 </head>
 <body>
 
+
     <nav class="navbar">
-        <img src="img/logo.png" class="logo" alt="">
+        <h1>CampusConnect</h1>
         <ul class="links-container">
             <li class="link-item"><a href="/" class="link">home</a></li>
             <li class="link-item"><a href="/editor" class="link">editor</a></li>
         </ul>
     </nav>
-    
     <div class="banner"></div>
 
     <div class="blog">
