--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -25,14 +25,14 @@
 
     <!-- blog section -->
     <section class="blogs-section">
-        <!-- <div class="blog-card">
+        <div class="blog-card">
             <img src="img/header.png" class="blog-image" alt="">
             <h1 class="blog-title">Lorem ipsum dolor sit amet consectetur.</h1>
             <p class="blog-overview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt incidunt fugiat quos porro repellat harum. Adipisci tempora corporis rem cum.</p>
             <a href="/" class="btn dark">read</a>
             <a href="/" class="btn grey">edit</a>
             <a href="/" class="btn danger">delete</a>
-        </div> -->
+        </div>
     </section>
     <script src="./js/nav.js"></script>
     <script src="./js/firebase.js"></script>
