--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <nav class="navbar">
+    <nav class="navbar" id="toggle-collapse">
         <h1>CampusConnect</h1>
         <ul class="links-container">
             <li class="link-item"><a href="/" class="link">home</a></li>
